[gd_scene load_steps=7 format=2]

[ext_resource path="res://GFX/Particles/lighting_blue.png" type="Texture" id=1]
[ext_resource path="res://GFX/Particles/lighting_yellow.png" type="Texture" id=2]
[ext_resource path="res://Hazards/Lighting.gd" type="Script" id=3]
[ext_resource path="res://SFX/thunder2.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.5435, 56.6479 )

[node name="Lighting" type="Node2D"]

[node name="LightingArea2D" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="LightingArea2D"]
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightingArea2D"]
shape = SubResource( 2 )

[node name="LightingAudioStreamPlayer" type="AudioStreamPlayer" parent="LightingArea2D"]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="LightingArea2D"]
[connection signal="screen_exited" from="LightingArea2D/VisibilityNotifier2D" to="LightingArea2D" method="_on_VisibilityNotifier2D_screen_exited"]
